# CiCueTea

./: .clang-format  .gitignore  ApplyClangFormat.sh  CITATION.cff  CMakeLists.txt  FFTSelection.cmake  GitData.cmake  LICENSE  README.md  SourceFiles.cmake
.github/workflows/: doxygen-pages.yml
Benchmarks/: README.md  compare.py  requirements.txt
Benchmarks/cpp/: CMakeLists.txt  bench.cpp
Benchmarks/results/: 2026-07-11-apple-m2-max-cpp.md  2026-07-11-apple-m2-max.md  2026-07-11-apple-m2-pro-cpp.md  2026-07-11-apple-m2-pro.md  2026-07-11-rpi4-aarch64-cpp.md  2026-07-11-rpi4-aarch64.md  2026-07-12-apple-m4-cpp.md  2026-07-12-apple-m4.md  2026-07-12-intel-r-core-tm-i9-8950hk-cpu-2-90ghz-cpp.md  2026-07-12-intel-r-core-tm-i9-8950hk-cpu-2-90ghz.md
Include/: Benchtools.h  CQT.hpp  CQTProcessor.hpp  CQTUtils.h  DoubleBuffer.h  FFT.hpp  MathUtils.h  OverlapAddProcessor.hpp  RingBuffer.hpp  SignalUtils.h  Slicer.hpp  Splicer.hpp  VectorOps.h  Windows.h
Matlab/: nsgfCQT.m  nsgfCQTInit.m  nsgfRasterize.m  nsgfVQTInit.m  packageToolbox.m  ppoToQ.m  test1.m  test6.m
Matlab/OLD/: SpecBuffering.m  SpecDebuffering.m  buffering.m  deBuffering.m
Matlab/OLD/src/: SpecDebuffering.m  nsgfCQT.m  nsgfCQTInit.m  nsgfICQT.m  nsgfRasterize.m  qToPpo.m
Matlab/OLD/tests/: test1.m  test2.m
Matlab/OLD/tests/OLD/: cellDeBuffering.m  test2.m  test3.m  test4.m  test5.m
Matlab/demo/: Demo1.m  Demo2.m  Demo3.m  GettingStarted.m  GettingStarted.mlx  test1.m  test2.m  test3.m  test4.m
Matlab/demo/Psychoacoustics/: bark2freq.m  freq2bark.m  freq2mel.m  mel2freq.m
Matlab/src/: Contents.m  SpecBuffering.m  nsgfCQT.m  nsgfCQTInit.m  nsgfICQT.m  nsgfRasterize.m  nsgfVQTInit.m  ppoToQ.m
Matlab/src/Psychoacoustics/: erb2freq.m  freq2erb.m
Matlab/src/Slicing/: slicer.m  spectralSlicer.m  spectralSplicer.m  splicer.m
Matlab/src/Utils/: colfun.m  dB.m  domainColor.m  ppoToQ.m  qToPpo.m
Matlab/tests/: test1.m
Matlab/tests/OLD/: cellBuffering.m
Python/: Demo1.py  Demo2.py  Demo3.py  NsgfCQT.py  README.md  Slicing.py  Test1.py  psychoacoustics.py  pyproject.toml
Python/examples/: Demo1.py  Demo2.py  Demo3.py
Python/src/cicuetea/: __init__.py
Python/tests/: test_roundtrip.py
Source/: Benchtools.h  CQT.cpp  CQT.hpp  CQTProcessor.cpp  FFT.cpp  FFT.hpp  FFT_FFTW.h  FFT_MKL.h  FFT_PFFFT.h  FFT_vDSP.h  OverlapAddProcessor.cpp  OverlapAddProcessor.hpp  RTChecker.h  RingBuffer.cpp  RingBuffer.hpp  Slicer.cpp  Slicer.hpp  Splicer.cpp  Splicer.hpp  VectorOps.h  Windows.h
Tests/: CMakeLists.txt
Tests/Source/: Benchtools.h  CQT_UnitTests.cpp  DFT_UnitTests.cpp  EmptyCQTProc.h  FFTLib_UnitTests.cpp  MultiDFT_UnitTests.cpp  Perf_UnitTests.cpp  Simple_UnitTests.cpp  SliCQTTest_UnitTests.cpp  Slicing_UnitTests.cpp  SlidingCQT_UnitTests.cpp  SlidingExtended_UnitTests.cpp  StabilityTest.cpp  TestSignals.h  Timing_Tests.cpp  VectorOps.h  main.cpp
Tests/Source/Delete/: Buffers.h
docs/: Doxyfile
